link preview meta config

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.webmanifest">
     <!-- preview -->
-    <meta name="description" content="Explore is your guide to finding your next project, catching up with what’s trending, and connecting with the GitHub community.">
-    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub">
-  <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
+    <meta name="description" content="Simple grade/ gpa calculator. Mainly focused on simplicity. This web app is installable on your device as native app and works online. Help your self. ">
+    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="Grade Analyzer">
+  <link rel="fluid-icon" href="https://betsegaw-hp.github.io/grade_sys/grade.png" title="Grade Analyzer">
   <meta property="fb:app_id" content="1401488693436528">
   <meta name="apple-itunes-app" content="app-id=1477376905" />
-    <meta name="twitter:image:src" content="https://github.githubassets.com/images/modules/explore/social.jpg" /><meta name="twitter:site" content="@github" /><meta name="twitter:card" content="summary_large_image" /><meta name="twitter:title" content="Explore GitHub" /><meta name="twitter:description" content="Explore is your guide to finding your next project, catching up with what’s trending, and connecting with the GitHub community." />
-    <meta property="og:image" content="https://github.githubassets.com/images/modules/explore/social.jpg" /><meta property="og:image:alt" content="Explore is your guide to finding your next project, catching up with what’s trending, and connecting with the GitHub community." /><meta property="og:site_name" content="GitHub" /><meta property="og:type" content="object" /><meta property="og:title" content="Explore GitHub" /><meta property="og:url" content="https://github.com/explore" /><meta property="og:description" content="Explore is your guide to finding your next project, catching up with what’s trending, and connecting with the GitHub community." />
+    <meta name="twitter:image:src" content="https://betsegaw-hp.github.io/grade_sys/screenshot-of-app.png" /><meta name="twitter:site" content="@github" /><meta name="twitter:card" content="summary_large_image" /><meta name="twitter:title" content="Calculate Your Grade" /><meta name="twitter:description" content="Simple grade/ gpa calculator. Mainly focused on simplicity. This web app is installable on your device as native app and works online. Help your self. " />
+    <meta property="og:image" content="https://betsegaw-hp.github.io/grade_sys/screenshot-of-app.png" /><meta property="og:image:alt" content="Simple grade/ gpa calculator. Mainly focused on simplicity. This web app is installable on your device as native app and works online. Help your self. " /><meta property="og:site_name" content="Grade Analyzer" /><meta property="og:type" content="object" /><meta property="og:title" content="Calculate Your Grade" /><meta property="og:url" content="https://betsegaw-hp.github.io/grade_sys/index" /><meta property="og:description" content="Simple grade/ gpa calculator. Mainly focused on simplicity. This web app is installable on your device as native app and works online. Help your self. " />
 
     <!-- icon bootstrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
