--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <i class="bi bi-info-circle text-white"></i>
               </button>
                       <!-- Button trigger modal -->
-                <button type="button" id="install-prompt-btn" class="btn btn-primary ms-2 me-2" title="install to use offline">
+                <button type="button" id="install-prompt-btn" class="btn btn-primary me-2" title="install to use offline">
                 Install <i class="bi bi-plus-circle ms-2"></i>
                 </button>
             </div>
