--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="result-conatiner  bg-dark bg-gradient">
                     <div class="icon m-2">
-                        <a target="_blank" href=""><i class="bi bi-youtube text-white" style="font-size: 2rem; cursor: pointer;"></i></a>
+                        <a target="_blank" href="https://youtu.be/PsqmaIYtEL8"><i class="bi bi-youtube text-white" style="font-size: 2rem; cursor: pointer;"></i></a>
                     </div>
                     <div class="result-wrapper p-2">
                         <span class="text-white-50"> grade result</span>
