changing video icon by question mark and position

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="manifest" href="manifest.webmanifest">
     <!-- preview -->
     <meta name="description" content="Simple grade/ gpa calculator. Mainly focused on simplicity. This web app is installable on your device as native app and can work offline. Help your self. ">
-    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="Grade Analyzer">
   <link rel="fluid-icon" href="https://betsegaw-hp.github.io/grade_sys/grade.png" title="Grade Analyzer">
   <meta property="fb:app_id" content="1401488693436528">
   <meta name="apple-itunes-app" content="app-id=1477376905" />
@@ -90,14 +89,15 @@
                     <form id="form">
                         <button id="btn-add" class="btn btn-outline-primary mb-2 me-2" title='add grade' type="button">Add</button>
                         <button id="btn-submit" class="btn btn-outline-success mb-2" type="submit">result</button>
-                        <span class="row-count"></span>
+                        <span class="row-count ms-1"></span>
+                        <span class="icon m-2" style="float: right;">
+                            <a target="_blank" href="https://youtu.be/PsqmaIYtEL8"><i class="bi bi-patch-question text-warning" style="cursor: pointer;"></i></a>
+                        </span>
                         <div class="form-wrapper"></div>
                     </form>
                 </div>
                 <div class="result-conatiner  bg-dark bg-gradient">
-                    <div class="icon m-2">
-                        <a target="_blank" href="https://youtu.be/PsqmaIYtEL8"><i class="bi bi-youtube text-white" style="font-size: 2rem; cursor: pointer;"></i></a>
-                    </div>
+ 
                     <div class="result-wrapper p-2">
                         <span class="text-white-50"> grade result</span>
                     </div>
