--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="result-conatiner  bg-dark bg-gradient">
  
                     <div class="result-wrapper p-4">
-                        <span class="text-white-50"> grade result</span>
+                        <span class="text-white-50"> __._ _</span>
                     </div>
                 </div>
             </div>
